Fixed post table body truncation with scss app addition

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,1 +1,7 @@
 @import "bootstrap";
+
+.custom {
+    .text-truncate {
+        max-width: 100%;
+    }
+}
